--- a/GenCon-iOS/GenCon-iOS/Base.lproj/Main.storyboard
+++ b/GenCon-iOS/GenCon-iOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PXQ-bK-Nhr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UtG-Vb-v7h">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -8,12 +8,34 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HiraginoMaruGothProN.ttc">
+            <string>HiraMaruProN-W4</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="vKV-8Q-eEt">
+            <objects>
+                <tabBarController id="UtG-Vb-v7h" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TRY-bL-3sg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="PXQ-bK-Nhr" kind="relationship" relationship="viewControllers" id="D9a-TW-iUO"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k8V-1r-5SB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2150" y="489"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="oY5-Lb-17j">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uvJ-4f-gny" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="PXQ-bK-Nhr" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="XXj-jZ-d3p"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="POl-fT-B4b">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -26,10 +48,11 @@
                         <segue destination="TPn-2a-DSC" kind="relationship" relationship="rootViewController" id="SU0-xg-VIf"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uvJ-4f-gny" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1433" y="489"/>
         </scene>
-        <!--GenCon-->
+        <!--1970/01/01-->
         <scene sceneID="pDZ-n5-XC3">
             <objects>
                 <viewController id="TPn-2a-DSC" customClass="ViewController" customModule="GenCon_iOS" customModuleProvider="target" sceneMemberID="viewController">
@@ -39,7 +62,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="0g3-tu-Ict"/>
                     </view>
-                    <navigationItem key="navigationItem" title="GenCon" id="wo4-rv-buN"/>
+                    <navigationItem key="navigationItem" title="1970/01/01" id="wo4-rv-buN"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QRA-6u-srM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -52,14 +75,36 @@
                     <view key="view" contentMode="scaleToFill" id="2NN-p9-i3o">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1940/01/01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YUR-xw-G2d">
+                                <rect key="frame" x="20" y="30" width="335" height="24"/>
+                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7X5-Uh-1Hw">
+                                <rect key="frame" x="20" y="74" width="335" height="573"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="YUR-xw-G2d" firstAttribute="top" secondItem="STW-kd-a7u" secondAttribute="top" constant="10" id="1oM-RV-uQR"/>
+                            <constraint firstItem="7X5-Uh-1Hw" firstAttribute="top" secondItem="YUR-xw-G2d" secondAttribute="bottom" constant="20" id="6IN-jt-WMi"/>
+                            <constraint firstItem="STW-kd-a7u" firstAttribute="trailing" secondItem="7X5-Uh-1Hw" secondAttribute="trailing" constant="20" id="Imk-bp-6Iy"/>
+                            <constraint firstItem="YUR-xw-G2d" firstAttribute="leading" secondItem="7X5-Uh-1Hw" secondAttribute="leading" id="K68-Nu-pJR"/>
+                            <constraint firstItem="STW-kd-a7u" firstAttribute="bottom" secondItem="7X5-Uh-1Hw" secondAttribute="bottom" constant="20" id="LTt-Nv-r76"/>
+                            <constraint firstItem="YUR-xw-G2d" firstAttribute="top" secondItem="STW-kd-a7u" secondAttribute="top" constant="10" id="WiH-r1-WxA"/>
+                            <constraint firstItem="YUR-xw-G2d" firstAttribute="trailing" secondItem="7X5-Uh-1Hw" secondAttribute="trailing" id="Xu2-XI-s2o"/>
+                            <constraint firstItem="7X5-Uh-1Hw" firstAttribute="leading" secondItem="STW-kd-a7u" secondAttribute="leading" constant="20" id="Z00-8N-idv"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="STW-kd-a7u"/>
                     </view>
                     <navigationItem key="navigationItem" title="GenCon" id="kR2-wr-VC6"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IRm-SS-63i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="489"/>
+            <point key="canvasLocation" x="20" y="488.90554722638683"/>
         </scene>
         <!--GenCon-->
         <scene sceneID="CoB-40-RqS">
