--- a/GenCon-iOS/GenCon-iOS/Base.lproj/Main.storyboard
+++ b/GenCon-iOS/GenCon-iOS/Base.lproj/Main.storyboard
@@ -17,6 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.0" green="0.58823529411764708" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="PXQ-bK-Nhr" kind="relationship" relationship="viewControllers" id="D9a-TW-iUO"/>
@@ -32,7 +35,7 @@
         <scene sceneID="oY5-Lb-17j">
             <objects>
                 <navigationController id="PXQ-bK-Nhr" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Event" id="XXj-jZ-d3p"/>
+                    <tabBarItem key="tabBarItem" title="Event" image="event" id="XXj-jZ-d3p"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="POl-fT-B4b">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -57,6 +60,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="0g3-tu-Ict"/>
                     </view>
                     <navigationItem key="navigationItem" title="1970/01/01" id="wo4-rv-buN"/>
@@ -74,6 +78,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="TPy-Tx-yH8"/>
                     </view>
                     <navigationItem key="navigationItem" id="o49-UZ-e1P"/>
@@ -87,7 +92,7 @@
         <scene sceneID="fHC-wx-o0k">
             <objects>
                 <navigationController id="IPR-sJ-ZVu" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Task" id="BQY-rj-grV"/>
+                    <tabBarItem key="tabBarItem" title="Task" image="task" id="BQY-rj-grV"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="D6n-so-fYl">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -108,7 +113,7 @@
         <scene sceneID="Kb6-We-hwn">
             <objects>
                 <navigationController id="LWu-mS-VCx" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Announce" id="U7G-hW-TQr"/>
+                    <tabBarItem key="tabBarItem" title="Announce" image="announce" id="U7G-hW-TQr"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="ttS-Gw-AcU">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -133,6 +138,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="abd-5p-K2D"/>
                     </view>
                     <navigationItem key="navigationItem" id="Q9t-Bl-6x5"/>
@@ -143,4 +149,9 @@
             <point key="canvasLocation" x="169" y="1227"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="announce" width="30" height="30"/>
+        <image name="event" width="30" height="30"/>
+        <image name="task" width="30" height="30"/>
+    </resources>
 </document>
